conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      name: conv-api
      labels:
        components: frontend
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.2
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
          - name: conv-api-data
            mountPath: /opt/app/uploads
            subPath: img
      volumes:
        - name: conv-api-data
          persistentVolumeClaim:          
            claimName: conv-api-pvc
