pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    components: frontend
spec:
  containers:
  - name: conv-app
    image: antonlarichev/conv-app
    ports:
    - containerPort: 80    
    resources:
      limits:
        memory: "512Mi"
        cpu: "500m"
