rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.2.2-management
        ports:
        - containerPort: 5672
        resources:
          limits:
            memory: "500Mi"
            cpu: "300m"
        volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq
            subPath: mnesia
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:          
            claimName: rabbitmq-pvc
